# MAVfly

./: README.md
coordinateFly/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  coordinateFly  coordinateFly.cpp  coordinateValue.h
coordinateFly/.cmake/api/v1/reply/: cache-v2-a7e229d74a1e0d630782.json  cmakeFiles-v1-72543ebd3e14fb1ac1c5.json  codemodel-v2-a2cc06743b11033dbc58.json  index-2024-04-21T06-53-56-0665.json  target-coordinateFly-04421ad8cc238dc75430.json
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  flymode.cpp  mavfly.hpp  mavsdk_simplify.cpp
lib-old/includes/: flymode.hpp
lib/includes/: enumVelocityBodyYawspeed.h  flymode.hpp  mavsdk_init.hpp  mavsdk_simplify.hpp
lib/includes/includes/: mavsdk_simplify.hpp
lib/includes/mavsdk/mavlink/common/: common.h  mavlink.h
lib/includes/mavsdk/mavlink/minimal/: mavlink.h  minimal.h
lib/includes/mavsdk/mavlink/standard/: mavlink.h  standard.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mavsdk_simplify.cpp
src/includes/: mavsdk_simplify.hpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
test-old/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
test/.cmake/api/v1/reply/: cache-v2-63c05313915bc7e5e996.json  cmakeFiles-v1-15c87b5d2c849d066521.json  codemodel-v2-6405743fe41951991d0b.json  index-2024-04-28T03-05-47-0803.json  target-test-09ee94fc06cda9f3c5fb.json
thread_test/: thread_test  thread_test.cpp
